<resources>
    <string name="app_name">Seller Admin</string>

    <string name="initializing">Initializing</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_ui_text">Welcome\nBack</string>
    <string name="login_button">Login</string>
    <string name="contact_us">Contact Us</string>

    <string name="alert_header">Action Required!</string>
    <string name="alert_message">Accessibility Service needs to be running in order to run this app properly.</string>
    <string name="please_wait">Please Wait..</string>
    <string name="progress_message">Progress Message</string>
    <string name="cancel">Cancel</string>

    <string name="facebook_message">Contact with us on &lt;a href="https://www.facebook.com/SuperNova-271130343840929/">facebook&lt;a/></string>
    <string name="mail_message">Mail us on &lt;a href="mailto:bugdebugger404@gmail.com">this&lt;a/> address</string>

    <string name="transaction">Transactions</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Type Player Id, Trx Id or Phone Number</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">Pending</string>
    <string name="resend_chips">Resend to Server</string>
    <string name="confirm">Confirm</string>
    <string name="player_id">Player Id or Bullet Code</string>
    <string name="transaction_id">Transaction Id</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">Home</string>
    <string name="all_notifications">All Notifications</string>
    <string name="create_notification">Create Notification</string>
    <string name="notification_title">Notification Title</string>
    <string name="notification_content">Notification Content</string>
</resources>
